--- a/lifegpa/src/components/Header.css
+++ b/lifegpa/src/components/Header.css
@@ -1,5 +1,15 @@
 .header {
+    display: flex;
+    align-items: center;
+
     height: 10vh;
     background-color: #F7F7F7;
     border-bottom: 1px solid black;
+}
+
+.logo {
+    height: 75px;
+    width: 75px;
+    border: 1px solid black;
+    margin-left: 12px;
 }
