--- a/lifegpa/src/components/Dashboard.scss
+++ b/lifegpa/src/components/Dashboard.scss
@@ -52,18 +52,20 @@
 
 .minidash-container {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    justify-content: space-between;
     box-shadow: 0 10px 20px rgba(0,0,0,0.19), 
     0 6px 6px rgba(0,0,0,0.23);
     width: 100%;
     border-radius: 30px;
     padding: 10px 20px;
-    margin-bottom: 10px;
+    margin-bottom: 2rem;
 
     .progress-bar-container {
         display: flex;
         justify-content: center;
         align-items: center;
+        margin: 80px 0;
     }
     
     .title-container {
@@ -79,7 +81,7 @@
     .social-icon-container {
         display: flex;
         flex-direction: column;
-        align-items: flex-end;
+        justify-content: flex-end;
     }
     
     .social-icon-container h5 {
