Added Nav functionality and further styling on Dashboard view

--- a/lifegpa/src/components/Dashboard.scss
+++ b/lifegpa/src/components/Dashboard.scss
@@ -59,6 +59,7 @@
     border-radius: 30px;
     padding: 10px 20px;
     margin-bottom: 2rem;
+    background-color: #FFFFFF;
 
     .progress-bar-container {
         display: flex;
@@ -89,7 +90,17 @@
     }
     
     .social-icons {
-        padding: 10px 30px;
+        display: flex;
+        justify-content: space-evenly;
+
         font-size: 30px;
-    }    
+    }
+
+    h1 {
+        margin: 0 0 0.5rem 0;
+    }
+
+    h5 {
+        margin: 0;
+    }
 }
