--- a/lifegpa/src/components/Dashboard.css
+++ b/lifegpa/src/components/Dashboard.css
@@ -85,6 +85,7 @@
   border-radius: 30px;
   padding: 10px 20px;
   margin-bottom: 2rem;
+  background-color: #FFFFFF;
 }
 
 .minidash-container .progress-bar-container {
@@ -135,7 +136,20 @@
 }
 
 .minidash-container .social-icons {
-  padding: 10px 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
   font-size: 30px;
+}
+
+.minidash-container h1 {
+  margin: 0 0 0.5rem 0;
+}
+
+.minidash-container h5 {
+  margin: 0;
 }
 /*# sourceMappingURL=Dashboard.css.map */
