--- a/lifegpa/src/components/Header.css
+++ b/lifegpa/src/components/Header.css
@@ -3,13 +3,15 @@
     align-items: center;
 
     height: 10vh;
-    background-color: #F7F7F7;
+    background-color: #FAE9C6;
     border-bottom: 1px solid black;
 }
 
 .logo {
     height: 75px;
     width: 75px;
-    border: 1px solid black;
     margin-left: 12px;
+    border-radius: 6px;
+    box-shadow: 0 3px 10px rgba(0,0,0,0.19), 
+    0 6px 6px rgba(0,0,0,0.23);
 }
