--- a/lifegpa/src/components/Dashboard.scss
+++ b/lifegpa/src/components/Dashboard.scss
@@ -31,10 +31,11 @@
     }
 
     .dashboard-button {
-        width: 221px;
-        height: 222px;
-        border: 1px solid black;
+        width: 220px;
+        height: 220px;
         border-radius: 50%;
+        box-shadow: 0 3px 10px rgba(0,0,0,0.19), 
+        0 6px 6px rgba(0,0,0,0.23);
     }
 }
 
