--- a/lifegpa/src/components/Dashboard.css
+++ b/lifegpa/src/components/Dashboard.css
@@ -18,7 +18,7 @@
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .dashboard-widgets {
