--- a/lifegpa/src/components/Dashboard.scss
+++ b/lifegpa/src/components/Dashboard.scss
@@ -8,7 +8,7 @@
     flex-direction: column;
     justify-content: space-between;
 
-    height: 100vh;
+    min-height: 100vh;
 }
 
 .dashboard-widgets {
