--- a/lifegpa/src/components/Header.css
+++ b/lifegpa/src/components/Header.css
@@ -6,6 +6,14 @@
     background-color: #FAE9C6;
 }
 
+.header-icons {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
+    width: 95vw;
+}
+
 .logo {
     height: 75px;
     width: 75px;
@@ -13,4 +21,9 @@
     border-radius: 6px;
     box-shadow: 0 3px 10px rgba(0,0,0,0.19), 
     0 3px 6px rgba(0,0,0,0.23);
+}
+
+.sign-out {
+    height: 40px;
+    width: 45px;
 }
