--- a/lifegpa/src/components/Challenges.css
+++ b/lifegpa/src/components/Challenges.css
@@ -43,8 +43,22 @@
 }
 
 .search form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin-left: 1rem;
-  width: 69%;
+}
+
+.search form label {
+  width: 60%;
+}
+
+.search form img {
+  width: 36px;
+  height: 36px;
 }
 
 .search form input {
