--- a/lifegpa/src/components/Advice.css
+++ b/lifegpa/src/components/Advice.css
@@ -11,4 +11,142 @@
           justify-content: space-between;
   min-height: 100vh;
 }
+
+.advice-container .advice-body {
+  min-height: 80vh;
+  width: 100vw;
+}
+
+.advice-container .advice-body .advice-nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  height: 10vh;
+}
+
+.advice-container .advice-body .advice-nav form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.advice-container .advice-body .advice-nav form label {
+  width: 300px;
+}
+
+.advice-container .advice-body .advice-nav form img {
+  width: 36px;
+  height: 36px;
+}
+
+.advice-container .advice-body .advice-nav form input {
+  padding-left: 0.5rem;
+}
+
+.advice-container .advice-body .advice-nav h3 {
+  margin-right: 1rem;
+}
+
+.advice-header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 60%;
+}
+
+.advice-header h1 {
+  margin-left: 1rem;
+}
+
+.advice-header .advice-icons {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 400px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  text-align: center;
+}
+
+.advice-header .advice-icons .videos img {
+  margin-bottom: 7px;
+}
+
+.advice-featured-video {
+  margin-left: 2rem;
+}
+
+.advice-articles {
+  margin: 2rem;
+}
+
+.advice-articles .articles-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  height: 500px;
+  border-radius: 20px;
+  background-color: #FAE9C6;
+}
+
+.advice-articles .articles-container .articles-view {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  margin-top: 5rem;
+}
+
+.advice-articles .articles-container .articles-view-box {
+  width: 200px;
+}
+
+.advice-articles .articles-container .articles-view-img {
+  height: 200px;
+  width: 200px;
+  background-color: gray;
+}
+
+.articles-page-numbers {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  list-style: none;
+  width: 50%;
+  margin: auto;
+}
+
+.articles-page-numbers img {
+  height: 25px;
+  width: 25px;
+}
 /*# sourceMappingURL=Advice.css.map */
