--- a/lifegpa/src/components/login.css
+++ b/lifegpa/src/components/login.css
@@ -1,34 +1,47 @@
-.login-page{
-    border: 2px solid red;
-    width: 600px;
-    margin: 0 25%;
-    background: white;
-    position: absolute;
-    top: 40px;
+.login-page-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 
+    min-height: 100vh;
 }
+
+.login-page{
+    width: 600px;
+    background: white;
+    margin: auto;
+    text-align: center;
+    border-radius: 20px;
+    background-color: #FFFFFF;
+}
+
 .login-header{
     font-size: 1.6rem
 }
 .login-form-field{
     display: flex;
     flex-direction: column; 
-    margin: 0 20%;
 }
 .form-field{
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     padding: 2%;
+    margin-left: 1rem;
 }
 .button{
     border-radius: 10px;
     width: 202px;
-    margin: 31px 0 20px 50px;
+    margin: 2rem auto;
     height: 42px;
+    background-color: #234059;
+    color: #FFE785;
+    font-weight: 600;
 }
 input{
     width: 80%;
     border-radius: 4px;
     height: 30px;
+    padding-left: 0.5rem;
+    background-color: #FDF5E5;
 }
