--- a/lifegpa/src/components/Dashboard.css
+++ b/lifegpa/src/components/Dashboard.css
@@ -21,6 +21,11 @@
   min-height: 100vh;
 }
 
+.dashboard-container .body {
+  min-height: 80vh;
+  padding-top: 2rem;
+}
+
 .dashboard-widgets {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -29,9 +34,9 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   width: 50vw;
   padding-right: 181px;
 }
@@ -40,9 +45,9 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
   width: 100%;
 }
 
@@ -82,7 +87,7 @@
           justify-content: space-between;
   -webkit-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
           box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
-  width: 100%;
+  width: 700px;
   border-radius: 30px;
   padding: 10px 20px;
   margin-bottom: 2rem;
