--- a/lifegpa/src/components/Dashboard.scss
+++ b/lifegpa/src/components/Dashboard.scss
@@ -9,12 +9,17 @@
     justify-content: space-between;
 
     min-height: 100vh;
+
+    .body {
+        min-height: 80vh;
+        padding-top: 2rem;
+    }
 }
 
 .dashboard-widgets {
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
+    align-items: center;
 
     width: 50vw;
     padding-right: 181px;
@@ -22,7 +27,7 @@
 
 .dashboard-nav-buttons {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
 
     width: 100%;
 
@@ -56,7 +61,7 @@
     justify-content: space-between;
     box-shadow: 0 10px 20px rgba(0,0,0,0.19), 
     0 6px 6px rgba(0,0,0,0.23);
-    width: 100%;
+    width: 700px;
     border-radius: 30px;
     padding: 10px 20px;
     margin-bottom: 2rem;
