--- a/lifegpa/src/components/login.css
+++ b/lifegpa/src/components/login.css
@@ -29,7 +29,7 @@
     padding: 2%;
     margin-left: 1rem;
 }
-.button{
+button{
     border-radius: 10px;
     width: 202px;
     margin: 2rem auto;
