--- a/lifegpa/src/components/Dashboard.scss
+++ b/lifegpa/src/components/Dashboard.scss
@@ -12,7 +12,6 @@
 
     .body {
         min-height: 80vh;
-        padding-top: 2rem;
     }
 }
 
@@ -22,6 +21,7 @@
     align-items: center;
 
     width: 50vw;
+    padding-top: 2rem;
     padding-right: 181px;
 }
 
@@ -109,4 +109,8 @@
     h5 {
         margin: 0;
     }
+}
+
+.dashboard-profile-container {
+    padding-top: 2rem;
 }
