--- a/lifegpa/src/components/ViewGoals.css
+++ b/lifegpa/src/components/ViewGoals.css
@@ -2,7 +2,7 @@
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   width: 440px;
   border-radius: 10px;
-  padding: 20px;
+  padding: 15px 20px;
   margin: 20px;
   max-height: 300px;
   background: #f1f1f1;
@@ -10,6 +10,14 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: stretch;
+}
+
+.goal-container h1 {
+  margin: 5px 0 10px 0;
+}
+.goal-container h3 {
+  margin: 5px 0;
+  font-weight: 400;
 }
 
 .button-container {
@@ -74,11 +82,11 @@
 }
 
 .goal-details {
-  margin: 15px 0;
+  margin: 5px 0;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-end;
 }
 
 .goal-details h4,
@@ -88,6 +96,25 @@
   font-weight: 200;
 }
 
+.goal-details h4 {
+  margin-bottom: 10px;
+}
+
 .goal-details h5 {
   opacity: 0.7;
+}
+
+.start-end {
+  font-weight: 200;
+  font-size: 12px;
+  text-align: right;
+}
+
+.last-completed {
+  font-size: 12px;
+  font-weight: 200;
+}
+
+.last-completed h5 {
+  font-size: 14px;
 }
